# cxxcbcore

./: CMakeLists.txt
include/cxxcbcore/: cxxcbcore.hxx  cxxcbcore_config.hxx.in
